Add modes for small screens: classic and extriem

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                                     data-bs-target="#big-mode-tutorial" data-bs-dismiss="modal"></i></span>
                         </div>
                         <div class="col d-flex justify-content-center align-items-center model-buttons my-col">
-                            <button id="small-mode-button" class="mode-btn">Clasic</button>
+                            <button id="small-mode-button" class="mode-btn" data-bs-dismiss="modal">Clasic</button>
                         </div>
                     </div>
                 </div>
