--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="mode-tutorial-Label">Modal title</h5>
+                    <h5 class="modal-title" id="mode-tutorial-Label">Mode Select</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -134,7 +134,7 @@
                                     data-bs-target="#big-mode-tutorial" data-bs-dismiss="modal"></i></span>
                         </div>
                         <div class="col d-flex justify-content-center align-items-center model-buttons my-col">
-                            <button id="small-mode-button" class="mode-btn" data-bs-dismiss="modal">Clasic</button>
+                            <button id="small-mode-button" class="mode-btn" data-bs-dismiss="modal">Classic</button>
                         </div>
                     </div>
                 </div>
@@ -158,18 +158,18 @@
                         <li><i class="fas fa-gamepad explanation-icons"></i> - Click this icon to reset the game.</li>
                         <li><i class="far fa-question-circle explanation-icons"></i> - Click this icon to get tutorial
                             explanations.</li>
-                        <li><button class="tutorial-btns">Clasic</button> - Click this butto to change
-                            game mode. Classic shows same patter witch gets longer after correct clicks.</li>
-                        <li><button class="tutorial-btns">Extriem</button> - Click this butto to change
-                            game mode. Extriem mode changes color pattern and makes it longer after corect clicks.</li>
-                        <li><button class="tutorial-btns">0</button> - Button on the roght side of the screen
-                            shows your high score on click shows top 10 highs scores made.</li>
+                        <li><button class="tutorial-btns">Classic</button> - Click this button to change game mode.
+                            Classic shows same patter witch gets longer after correct clicks.</li>
+                        <li><button class="tutorial-btns">Extreme</button> - Click this button to change game mode.
+                            Extreme mode changes color pattern and makes it longer after correct clicks.</li>
+                        <li><button class="tutorial-btns">0</button> - Button on the right side of the screen shows your
+                            high score on click shows top 5 highs scores made.</li>
                         <li><button class="tutorial-start"></button> - Click this button to start the game. On click you
-                            will start to see your
-                            current score and the color patter will start.</li>
-                        <li>Color will blink in a pattern. You must repeat the pattern witch will get longer and longer.
-                            The game is infinit, how long can you go?</li>
-                        <li><i class="fas fa-envelope explanation-icons"></i> - Click this icon to send some feedback.</li>
+                            will start to see your current score and the color pattern will start.</li>
+                        <li>The color will blink in a pattern. You must repeat the pattern witch will get longer and
+                            longer. The game is infinite, how long can you go?</li>
+                        <li><i class="fas fa-envelope explanation-icons"></i> - Click this icon to send some feedback.
+                        </li>
                     </ul>
                 </div>
                 <div class="modal-footer">
@@ -183,7 +183,7 @@
         <div class="modal-dialog  modal-dialog-centered modal-xl">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="hoghscore-bord-Label">High Score Bord</h5>
+                    <h5 class="modal-title" id="hoghscore-bord-Label">High Score Board</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -228,7 +228,7 @@
                             </table>
                         </div>
                         <div class="col">
-                            <h3>Extriem</h3>
+                            <h3>Extreme</h3>
                             <table class="table">
                                 <thead>
                                     <tr>
@@ -304,61 +304,6 @@
             </div>
         </div>
     </div>
-
-    <!--
-        <div class="container-fluid">
-
-        <div id="game-tutorial" class="row">
-
-            <div id="reset-game" class="col vertical-center main-modes">
-                <a class="header-link" href="#"><img id="reset-icon" src="assets/img/color-disc-icon_eddited.jpg"
-                        alt="Reset icon"></a>
-            </div>
-
-            <div id="tutorial-icon-container" class="col vertical-center main-modes">
-                <a class="header-link" href="#"><i id="turorial-icon" class="fas fa-gamepad"></i></a>
-            </div>
-            <div id="control-area" class="row">
-
-                <div id="mode-select" class="col vertical-center">
-                    <button class="mode-btn clasic">Medium</button>
-                </div>
-
-                <div id="color-button-area" class="col-6 my-col">
-                    <div class="row">
-                        <div id="red-button" class="col color-area color-btn">
-                        </div>
-                        <div id="blue-button" class="col color-area color-btn">
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div id="green-button" class="col color-area color-btn">
-                        </div>
-                        <div id="yellow-button" class="col color-area color-btn">
-                        </div>
-                    </div>
-                    <div class="row-fluid">
-                        <div id="feed-back" class="col footer"></textarea></div>
-                        <div class="col"><button id="start-button" class="disabled-button"><span
-                                    id="current-score-big">0</span></button></div>
-                        <div id="footer-info"class="col footer">
-                            <p>
-                                <br>
-                                Made by Karolis Fedorkinas for "Code Institute" milestone project 2. 2021-08-08
-                            </p>
-                        </div>
-                    </div>
-
-                <div id="high-score-area" class="col vertical-center">
-                    <button id="high-score-button" class="score-btn"><span id="high-score-big">0</span></button>
-                </div>
-            </div>
-        </div>
-    </div>
-    <audio id="stomp">
-        <source src="assets/sound/stomp-1_short.mp3" type="audio/mp3">
-    </audio>
--->
 </body>
 
 </html>
