Change reset button icon. Add functionalaty to the resset button

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div id="main-container" class="container my-container">
         <div id="main-modes" class="row my-row">
             <div class="col d-flex justify-content-center my-col">
-                <span><i id="reset-button" class="fas fa-gamepad main-modes-icons"></i></span>
+                <span><i id="reset-button" class="fas fa-sync-alt main-modes-icons"></i></span>
             </div>
             <div class="col-6 show-big-screen my-col">
                 <div class="row d-flex justify-content-center my-row">
@@ -116,6 +116,7 @@
             </div>
         </div>
     </div>
+    
     <audio id="stomp">
         <source src="assets/sound/stomp-1_short.mp3" type="audio/mp3">
     </audio>
@@ -155,7 +156,7 @@
                 </div>
                 <div class="modal-body">
                     <ul id="tutorial-explanations">
-                        <li><i class="fas fa-gamepad explanation-icons"></i> - Click this icon to reset the game.</li>
+                        <li><i class="fas fa-sync-alt explanation-icons"></i> - Click this icon to reset the game.</li>
                         <li><i class="far fa-question-circle explanation-icons"></i> - Click this icon to get tutorial
                             explanations.</li>
                         <li><button class="tutorial-btns">Classic</button> - Click this button to change game mode.
