Achange style of high score small button. Change text inside high score buttons

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             </div>
             <div class="col show-big-screen vertical-center my-col">
                 <button id="high-score-button" class="score-btn btns show-big-screen" data-bs-toggle="modal"
-                    data-bs-target="#hoghscore-bord"><span id="high-score-big">0</span></button>
+                    data-bs-target="#hoghscore-bord"><span id="high-score-big">High Score</span></button>
             </div>
         </div>
 
@@ -112,11 +112,11 @@
             </div>
             <div class="col d-flex justify-content-center align-items-center my-col">
                 <button id="small-high-score-button" class="score-btn show-small-screen" data-bs-toggle="modal"
-                    data-bs-target="#hoghscore-bord"><span id="small-high-score">0</span></button>
+                    data-bs-target="#hoghscore-bord"><span id="small-high-score">High Score</span></button>
             </div>
         </div>
     </div>
-    
+
     <audio id="stomp">
         <source src="assets/sound/stomp-1_short.mp3" type="audio/mp3">
     </audio>
@@ -163,7 +163,7 @@
                             Classic shows same patter witch gets longer after correct clicks.</li>
                         <li><button class="tutorial-btns">Extreme</button> - Click this button to change game mode.
                             Extreme mode changes color pattern and makes it longer after correct clicks.</li>
-                        <li><button class="tutorial-btns">0</button> - Button on the right side of the screen shows your
+                        <li><button class="tutorial-btns">High Score Board</button> - Button on the right side of the screen shows your
                             high score on click shows top 5 highs scores made.</li>
                         <li><button class="tutorial-start"></button> - Click this button to start the game. On click you
                             will start to see your current score and the color pattern will start.</li>
