Change the style of start button to make it more intuvitive

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
             <div class="col-6 show-big-screen my-col">
                 <div class="row d-flex justify-content-center my-row">
                     <div class="col d-flex justify-content-center my-col">
-                        <button id="start-button" class="startButton"><span id="current-score-big">0</span></button>
+                        <button id="start-button" class="startButton"><span
+                                class="d-flex align-items-center justify-content-center"
+                                id="current-score-big">0</span></button>
                     </div>
                 </div>
                 <div class="row my-row">
@@ -79,6 +81,7 @@
                 <div class="row show-small-screen d-flex justify-content-center my-row">
                     <div class="col d-flex justify-content-center my-col">
                         <button id="small-start-button" class="startButton show-small-screen"><span
+                                class="d-flex align-items-center justify-content-center"
                                 id="small-current-score">0</span></button>
                     </div>
                 </div>
@@ -163,7 +166,8 @@
                             Classic shows same patter witch gets longer after correct clicks.</li>
                         <li><button class="tutorial-btns">Extreme</button> - Click this button to change game mode.
                             Extreme mode changes color pattern and makes it longer after correct clicks.</li>
-                        <li><button class="tutorial-btns">High Score Board</button> - Button on the right side of the screen shows your
+                        <li><button class="tutorial-btns">High Score Board</button> - Button on the right side of the
+                            screen shows your
                             high score on click shows top 5 highs scores made.</li>
                         <li><button class="tutorial-start"></button> - Click this button to start the game. On click you
                             will start to see your current score and the color pattern will start.</li>
