Move feedback function to seperet file: sendEmail.js

--- a/index.html
+++ b/index.html
@@ -166,10 +166,12 @@
                             Classic shows same patter witch gets longer after correct clicks.</li>
                         <li><button class="tutorial-btns">Extreme</button> - Click this button to change game mode.
                             Extreme mode changes color pattern and makes it longer after correct clicks.</li>
-                        <li><button class="tutorial-btns">High Score Board</button> - Button on the right side of the
+                        <li><button class="tutorial-btns hs">High Score</button> - Button on the right side of the
                             screen shows your
                             high score on click shows top 5 highs scores made.</li>
-                        <li><button class="tutorial-start"></button> - Click this button to start the game. On click you
+                        <li><button
+                                class="tutorial-start"></button> -
+                            Click this button to start the game. On click you
                             will start to see your current score and the color pattern will start.</li>
                         <li>The color will blink in a pattern. You must repeat the pattern witch will get longer and
                             longer. The game is infinite, how long can you go?</li>
@@ -309,6 +311,7 @@
             </div>
         </div>
     </div>
+    <script src="assets/js/sendEmail.js"></script>
 </body>
 
 </html>
