Change background colors for header and footer. Change hover style for mode and highscore buttons. Change bar icon for small screens

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         data-bs-target="#big-mode-tutorial"></i></span>
                 <span><button id="bar-button" class="show-small-screen main-modes-icons d-flex align-items-center"
                         data-bs-toggle="modal" data-bs-target="#mode-tutorial">
-                        <i id="bar-icon" class="fas fa-bars show-small-screen"></i>
+                        <i id="bar-icon" class="far fa-question-circle show-small-screen"></i>
                     </button></span>
             </div>
 
